[gd_scene load_steps=15 format=3 uid="uid://bhaysevd2o36q"]

[ext_resource type="Script" uid="uid://11hevj5wytix" path="res://scenes/GameContainer.gd" id="1"]
[ext_resource type="Theme" uid="uid://cpdo5t1tb74nu" path="res://assets/Theme.tres" id="3"]
[ext_resource type="Texture2D" uid="uid://c7v8b0jaos7om" path="res://assets/bgs/bgB2.png" id="4"]
[ext_resource type="Texture2D" uid="uid://cenq1dgfl8jxn" path="res://assets/bgs/bgB3.png" id="5"]
[ext_resource type="Texture2D" uid="uid://uak3276w112v" path="res://assets/bgs/bgB4.png" id="6"]
[ext_resource type="Texture2D" uid="uid://dy0ubcvdnhdqe" path="res://assets/bgs/bgB1.png" id="7"]
[ext_resource type="AudioStream" uid="uid://bphwt7sdtsq3j" path="res://assets/game_container/Alpha Dance.ogg" id="7_dws80"]

[sub_resource type="AnimatedTexture" id="1"]
frames = 4
frame_0/texture = ExtResource("7")
frame_1/texture = ExtResource("4")
frame_1/duration = 1.0
frame_2/texture = ExtResource("5")
frame_2/duration = 1.0
frame_3/texture = ExtResource("6")
frame_3/duration = 1.0

[sub_resource type="Animation" id="3"]
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/TransitionFadeRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="4"]
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/TransitionFadeRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="5"]
resource_name = "game_over"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/TransitionFadeRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/GameOverUI:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/GameOverUI:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.2, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/GameOverUI/HBoxContainer/TryAgainButton:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/GameOverUI/HBoxContainer/QuitButton:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="6"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(4, 4), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("TransitionUI/VBoxContainer/ReferenceRect/ColorRect/NextGameLabel:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/TransitionFadeRect:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="7"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(4, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TransitionUI/VBoxContainer/ReferenceRect/ColorRect/NextGameLabel:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/TransitionFadeRect:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v7mfk"]
_data = {
&"game_in": SubResource("3"),
&"game_out": SubResource("4"),
&"game_over": SubResource("5"),
&"ui_in": SubResource("6"),
&"ui_out": SubResource("7")
}

[node name="GameContainer" type="Node"]
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource("1")
stretch_mode = 1

[node name="TransitionUI" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -310.0
offset_top = -230.0
offset_right = 310.0
offset_bottom = 230.0
theme = ExtResource("3")

[node name="VBoxContainer" type="VBoxContainer" parent="TransitionUI"]
layout_mode = 2
alignment = 1

[node name="Score" type="Label" parent="TransitionUI/VBoxContainer"]
layout_mode = 2
text = "SCORE: 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReferenceRect" type="ReferenceRect" parent="TransitionUI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
border_color = Color(1, 0, 0, 0)

[node name="ColorRect" type="ColorRect" parent="TransitionUI/VBoxContainer/ReferenceRect"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -120.0
offset_right = 160.0
offset_bottom = 120.0
color = Color(0, 0, 0, 1)

[node name="NextGameLabel" type="Label" parent="TransitionUI/VBoxContainer/ReferenceRect/ColorRect"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("3")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "NEXT GAME IN
2"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Lives" type="Label" parent="TransitionUI/VBoxContainer"]
layout_mode = 2
text = "LIVES: 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TransitionFadeRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0)

[node name="GameOverUI" type="VBoxContainer" parent="CanvasLayer"]
visible = false
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
theme = ExtResource("3")
theme_override_constants/separation = 20
alignment = 1

[node name="GameOverLabel" type="Label" parent="CanvasLayer/GameOverUI"]
layout_mode = 2
theme = ExtResource("3")
text = "GAME OVER
FINAL SCORE: 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/GameOverUI"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="TryAgainButton" type="Button" parent="CanvasLayer/GameOverUI/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3")
disabled = true
text = "TRY AGAIN?"

[node name="QuitButton" type="Button" parent="CanvasLayer/GameOverUI/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3")
disabled = true
text = "QUIT"

[node name="NextGameTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_v7mfk")
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(320, 240)
position_smoothing_enabled = true

[node name="BGSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_dws80")
volume_db = -10.0
autoplay = true

[connection signal="pressed" from="CanvasLayer/GameOverUI/HBoxContainer/TryAgainButton" to="." method="_on_TryAgainButton_pressed"]
[connection signal="pressed" from="CanvasLayer/GameOverUI/HBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="timeout" from="NextGameTimer" to="." method="_on_next_game"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_transition_finished"]
